2011-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘msg’ from global state of ci(1).

	* ci.c (msg): Delete var.
	(getlogmsg): Take pointer to ‘msg’.
	(main): Add auto var ‘msg’; update calls to ‘getlogmsg’.

2011-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘exitstatus’ from global state in programs.

	* ci.c (exitstatus): Delete var.
	(cleanup): Take pointer to ‘exitstatus’.
	(main): Add auto var ‘exitstatus’; update call to ‘cleanup’.
	* co.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.

2011-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	co: Add option ‘-S’ to enable "self-same" mode.

	* b-excwho.c (addlock_maybe): Rename from ‘addlock’; take additional
	arg ‘bool selfsame’; if true, don't distinguish who holds a lock.
	* b-excwho.h (addlock_maybe): Update func decl.
	(addlock): New macro.
	* co.c (main): Add handling for ‘-S’; use ‘addlock_maybe’.

2011-09-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘set_program_name’ from gnulib.

	* rcsutil.c: #include "progname.h".
	(gnurcs_init): Use ‘set_program_name’ and ‘program->invoke’.
	* b-complain.c (program_name): Delete var.
	* b-complain.h (program_name): Delete var decl.

2011-09-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid "discards qualifiers" warning from GCC 4.4.

	This correctly finishes the incomplete lameness of 2011-06-14,
	"Avoid "discards qualifiers" warning from GCC 3.4".  The overall
	change is to convert from ‘char const *’ to ‘const char *’.

	* b-isr.c (catchsigaction): Add ‘const’ to local var.

2011-09-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ident: Recognize Subversion "fixed-width keyword syntax".

	* ident.c (match): Accept additional colon after the first
	is found; in that case, also allow hash before final ‘KDELIM’.

2011-08-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.8

2011-08-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use colon in ‘--version’ output instead of semicolon.

	Reported by Karl Berry.
